--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 
 }
 .headerIndex{
-    background-image: url(/images/header.jpg);
+    background-image: url(./images/header.jpg);
     background-size: cover;
     width: 100%;
     height: 100vh;
