--- a/style.css
+++ b/style.css
@@ -450,6 +450,7 @@ a:hover{
 .slidTitulo{
     color: white;
     margin: auto;
+    text-align: center;
 }
 
 .seguroCard{
@@ -1407,7 +1408,7 @@ span{
         margin-top:7rem;
         margin-bottom:7rem;
     }
-    .cardRetiro, .cardPrevencion, .cardBanco{
+    .cardRetiro, .cardPrevencion, .cardBanco .cardHablemos{
         height: 15rem;
         
     }
