--- a/style.css
+++ b/style.css
@@ -686,6 +686,7 @@ width: 20px;
 .navGeneral{
     max-width: 100vw;
     width: 100%;
+    height:11vh;
     transition: all 0.6s ease 0s;
     position: fixed;
     top: 0px;
@@ -946,6 +947,7 @@ width: 20px;
 .navBanco{
     max-width: 100vw;
     width: 100%;
+    height:11vh;
     transition: all 0.6s ease 0s;
     position: fixed;
     top: 0px;
@@ -972,6 +974,7 @@ width: 20px;
 .navRetiro{
     max-width: 100vw;
     width: 100%;
+    height:11vh;
     transition: all 0.6s ease 0s;
     position: fixed;
     top: 0px;
@@ -1045,6 +1048,7 @@ width: 20px;
 .navPrevencion{
     max-width: 100vw;
     width: 100%;
+    height:11vh;
     transition: all 0.6s ease 0s;
     position: fixed;
     top: 0px;
@@ -1401,6 +1405,9 @@ span{
 
 @media screen and (max-width: 599px) {
     
+    .retiroH2{
+        line-height: 3rem;
+    }
     .containerData{
         flex-direction: column;
         width: 80vw;
@@ -1408,7 +1415,7 @@ span{
         margin-top:7rem;
         margin-bottom:7rem;
     }
-    .cardRetiro, .cardPrevencion, .cardBanco .cardHablemos{
+    .cardRetiro, .cardPrevencion, .cardBanco, .cardHablemos{
         height: 15rem;
         
     }
